# python-iso4217

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/scripts/: compare_currency_data.sh  compare_hashes.sh
.github/workflows/: autoupdate_currency_data.yml  check_currency_db.yml  deploy.yml
iso4217/: __init__.py  __init__.pyi
iso4217/data/: currencies.json  hash
