[tool.poetry]
name = "python-iso4217"
version = "0.0.0"
description = ""
authors = ["GLEF1X <glebgar567@gmail.com>"]

packages = [
    { include = "iso4217" },
    { include = "iso4217/**/*.py" },
    { include = "iso4217/**/*.pyi" },
]

[tool.poetry.dependencies]
python = "^3.6"
ijson = "^3.1.4"

[tool.poetry.dev-dependencies]
poetry-dynamic-versioning = "^0.17.1"

[tool.poetry-dynamic-versioning]
enable = true
vsc = "git"
style = "semver"
bump = true
format = "{base}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
