[tool.poetry]
name = "python-iso4217"
version = "0.0.0"
description = ""
authors = ["GLEF1X <glebgar567@gmail.com>"]

packages = [
    { include = "./iso4217" },
    { include = "./iso4217/**/*.py" },
    { include = "./iso4217/**/*.pyi" },
]

[tool.poetry.dependencies]
python = "^3.6"
ijson = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
