[tool.poetry]
name = "python-iso4217"
description = "Lightweight ISO 4217 currency package"
version = "0.0.8"
authors = ["GLEF1X <glebgar567@gmail.com>"]
maintainers = [
    "GLEF1X <glebgar567@gmail.com>",
]
repository = "https://github.com/GLEF1X/python-iso4217"
readme = 'README.md'

packages = [
    { include = "./iso4217" },
    { include = "./iso4217/**/*.py" },
    { include = "./iso4217/**/*.pyi" },
]

[tool.poetry.dependencies]
python = "^3.6"
ijson = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
